[tool.setuptools_scm]
write_to = "sympleints/version.py"

[metadata]
name = sympleints
description = Molecular integrals over Gaussian basis functions using sympy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eljost/sympleints
maintainer = Johannes Steinmetzer
maintainer_email = johannes.steinmetzer@uni-jena.de
license = GNU General Public License v3 (GPLv3)
platform = unix
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    black
    colorama
    jinja2
    networkx
    numpy
    pytest
    sympy==1.10.1  # Currently fails with 1.11 because of GH issue #24236

[options.extras_require]
format = fprettify

[options.entry_points]
console_scripts =
    sympleints = sympleints.main:run_cli
    symplebench = sympleints.benchmark:run
