[tool.setuptools_scm]
write_to = "sympleints/version.py"

[metadata]
name = sympleints
description = Molecular integrals over Gaussian basis functions using sympy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eljost/sympleints
maintainer = Johannes Steinmetzer
maintainer_email = johannes.steinmetzer@uni-jena.de
license = European Union Public Licence v. 1.2 (EUPL-1.2)
platform = unix
classifiers =
    License :: OSI Approved :: EUROPEAN UNION PUBLIC LICENCE v. 1.2 (EUPL-1.2)

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    black
    colorama
    fprettify
    jinja2
    matplotlib
    networkx
    numpy
    pathos
    psutil
    sympy

[options.extras_require]
test = pyscf; pytest; pytest-cov

[options.entry_points]
console_scripts =
    sympleints = sympleints.main:run_cli
    sympleints-graph = sympleints.graphs.main:run
    symplebench = sympleints.benchmark:run
