sources = files(
  '__init__.py',
  'AngMoms.py',
  'generate.py',
  'helpers.py',
  'Integral.py',
  'main.py',
  'merge_exprs.py',
  'optimize.py',
  'render.py',
  'Transform.py',
  'triangle_rec.py',
)

python.install_sources(
  sources,
  subdir: 'sympleints/graphs'
)

subdir('defs')
subdir('templates')
