templates = files(
  'fortran_arg_declaration.tpl',
  'fortran_bench.tpl',
  'fortran_contracted_driver.tpl',
  'fortran_equi_func.tpl',
  'fortran_function_arr.tpl',
  'fortran_function.tpl',
  'fortran_init.tpl',
  'fortran_module.tpl',
  'numba_driver.tpl',
  'numba_equi_func.tpl',
  'numba_func.tpl',
  'numba_if_driver.tpl',
  'numba_module.tpl',
  'py_equi_func.tpl',
  'py_func_dict.tpl',
  'py_func.tpl',
  'py_module.tpl',
)

python.install_sources(
  templates,
  subdir: 'sympleints/templates'
)
