sources = files(
  'int_2c2e_equi_func.tpl',
  'int_2c2e_func.tpl',
  'int_2c2e_mod.tpl',
  'int_3c2e_equi_func.tpl',
  'int_3c2e_func.tpl',
  'int_3c2e_mod.tpl',
  'int_4c2e_equi_func.tpl',
  'int_4c2e_func.tpl',
  'int_4c2e_mod.tpl',
  'int_nucattr_equi_func.tpl',
  'int_nucattr_func.tpl',
  'int_nucattr_mod.tpl',
  'submodule.tpl',
)

python.install_sources(
  sources,
  subdir: 'sympleints/graphs/templates'
)
